Bug 491960. Only reflow due to selection if we did or will have overflowing selection decorations. r=dbaron